<resources>
    <string name="app_name">Learning Centers Hub</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="courses">My Courses</string>
    <string name="account">My Account</string>
    <string name="add_courses">Add Course</string>
    <string name="title_activity_login">Sign In</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_reenter_password">Confirm Password</string>
    <string name="action_sign_in">Sign In or Register</string>
    <string name="action_create_account">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Password must be > 5 characters</string>
    <string name="login_failed">"Login Failed"</string>
    <string-array name="category">
        <item>Business</item>
        <item>Cooking</item>
        <item>Engineering</item>
        <item>Graphic Design</item>
        <item>Language</item>
        <item>Music</item>
        <item>Programming</item>
        <item>Science</item>
    </string-array>
    <string-array name="course_info">
        <item>Name</item>
        <item>Category</item>
        <item>Image</item>
        <item>Fees</item>
        <item>Registration Fees</item>
        <item>Instructor First name(optional) </item>
        <item>Instructor Last name(optional) </item>
        <item>Instructor Bio (optional) </item>
        <item>Start Date</item>
        <item>End Date</item>
        <item>Days</item>
        <item>Description</item>
        <item>Preview (optional)</item>
        <item>Extra Information required: </item>
    </string-array>
    <string-array name="user_info">
        <item>Full Name</item>
        <item>Phone Number</item>
        <item>E-mail</item>
        <item>Knowledge Level </item>
        <item>Area</item>
        <item>City</item>
    </string-array>
    <string-array name="category_4">
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
    </string-array>
    <string-array name="learningcenters_4">
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
    </string-array>
    <string-array name="courses_4">
        <item>Photoshop- Beginners Course- Basic Designs</item>
        <item>Violin- Beginners Course- Basic Notes</item>
        <item>Photoshop- Advanced Course- Complex Designs</item>
        <item>Photoshop- Expert Course- Any Designs</item>
    </string-array>
    <string-array name="courses_learningcenter_4">
        <item>Center El7amd</item>
        <item>ABC Center</item>
        <item>Giza Center</item>
        <item>Cairo Center</item>
    </string-array>
    <string-array name="courses_price_4">
        <item>EGP 1000</item>
        <item>EGP 1200</item>
        <item>EGP 900</item>
        <item>EGP 850</item>
    </string-array>
    <string-array name="locations_4">
        <item>Tagamo3</item>
        <item>Masr Elgedida</item>
        <item>Madinaty</item>
        <item>Giza</item>
    </string-array>

    <string name="hint">Search Here</string>

    <string-array name="registered">
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
    </string-array>
    <string-array name="favourites">
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
    </string-array>

    <string-array name="categories">
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
    </string-array>

    <string-array name="Areas">
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
        <item>Science</item>
        <item>Programming</item>
        <item>Engineering</item>
        <item>Language</item>
    </string-array>

</resources>
